saint-lascivious.github.io: remove some straggling inline styles
 - remove inline styles
 - introduce subheader class
 - embiggen subheaders
 - bump service worker version to 0.1.2

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js
 - modified:   resources/stylesheets/.formatted/sainternet.min.css
 - modified:   resources/stylesheets/sainternet.min.css
 - modified:   serviceworker.min.js

--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -185,7 +185,7 @@
                 <img src="resources/images/luxio-shiny.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
               </picture>
             </a>
-            <p align="center">
+            <p class="embiggen sainternet-subheader-centered">
               A wild <b>Luxio</b> appeared!
             </p>
             <p>
