--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -173,7 +173,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3 id="androidprivatedns"><icon class="fa-brands fa-android"></icon>&nbsp;<span class="embiggen">Android<br>Private DNS</span></h3>
-            <p align="center">
+            <p class="embiggen sainternet-subheader-centered">
               Android 9 (Pie) or higher required.
             </p>
             <ol>
@@ -191,7 +191,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><icon class="fa-brands fa-apple"></icon>&nbsp;<span class="embiggen">Apple<br>iOS/macOS</span></h3>
-            <p align="center">
+            <p class="embiggen sainternet-subheader-centered">
               Apple iOS 14/macOS Big Sur or higher required.
             </p>
             <ol>
