--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -174,7 +174,7 @@
                 <img src="resources/images/wurmple-shiny.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
               </picture>
             </a>
-            <p align="center">
+            <p class="embiggen sainternet-subheader-centered">
               Welcome to Sainternet.
             </p>
             <p>
