--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -191,7 +191,7 @@
             <p class="embiggen" id="datetime">
               first posted on Friday, 14 April 2023 22:30+12:00 (NZST)<br>updated on Saturday, 15 April 2023 21:30+12:00 (NZST)
             </p>
-            <p align="center">
+            <p class="embiggen sainternet-subheader-centered">
               <b>Going Offline</b>
             </p>
             <p>
@@ -203,7 +203,7 @@
             <p>
               Historically, handling offline in a website or progressive web application was hard, with each service deploying their own workarounds or even just choosing not to handle the case at all.
             </p>
-            <p align="center">
+            <p class="embiggen sainternet-subheader-centered">
               <b>At Your Service</b>
             </p>
             <p>
@@ -212,7 +212,7 @@
             <p>
               Using a service worker allows for the interception of requests within the service worker's scope, which can then be acted on accordingly. For instance <code>sainternet.xyz</code>'s <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/blob/master/.formatted/serviceworker.min.js">service worker</a> uses both network first and cache first fetch policies depending upon the asset being requested. Objects that are likely to be static (fonts, images, etc.) or change infrequently are fetched by checking the cache first, falling back to network (if available) if the object is not found in the current cache. Dynamic or otherwise frequently updated objects are fetched from network first (if available), falling back to cache if the network request fails. Successful fetches from either case are added to the cache for later use.
             </p>
-            <p align="center">
+            <p class="embiggen sainternet-subheader-centered">
               <b>Putting It All Together</b>
             </p>
             <p>
