saint-lascivious.github.io: change debug presentation
 - debug.html, lazy mobile device exclusion
   display debug in every page, but only on large screens
 - cache busting by force
   bump service worker version to 0.2.0

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -139,6 +139,7 @@
             <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
             <a class="embiggen mdl-navigation__link" href="projects.html">Projects</a>
+            <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
           </nav>
         </div>
       </header>
@@ -151,6 +152,9 @@
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="#pokemon265"><b>&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Pokémon #265</b></a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+        </nav>
+        <nav class="mdl-navigation mdl-layout--large-screen-only">
+          <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
         </nav>
       </div>
       <div class="ribbon pink-ribbon"></div>
@@ -167,7 +171,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Pokémon #265<br>Wurmple</span></h3>
-            <a href="404.html" class="subterfuge">
+            <a href="pokedexoverdns.html" class="subterfuge">
               <picture class="light-mode-img">
                 <source srcset="resources/images/wurmple.webp" type="image/webp">
                 <source srcset="resources/images/wurmple.png" type="image/png">
