--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -154,6 +154,8 @@
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="#pokemon265"><b>&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Pokémon #404</b></a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+        </nav>
+        <nav class="mdl-navigation mdl-layout--large-screen-only">
           <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
         </nav>
       </div>
