--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -139,6 +139,8 @@
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+        </nav>
+        <nav class="mdl-navigation mdl-layout--large-screen-only">
           <a class="embiggen mdl-navigation__link" href="#debug"><b>Debug</b></a>
         </nav>
       </div>
