--- a/.formatted/filtereddns.html
+++ b/.formatted/filtereddns.html
@@ -139,6 +139,7 @@
             <a class="embiggen mdl-navigation__link" href="#filtereddns"><b>Filtered DNS</b></a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
             <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+            <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
           </nav>
         </div>
       </header>
@@ -156,6 +157,9 @@
           <a class="embiggen mdl-navigation__link" href="reportaproblem.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Report a Problem</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+        </nav>
+        <nav class="mdl-navigation mdl-layout--large-screen-only">
+          <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
         </nav>
       </div>
       <div class="ribbon amber-ribbon"></div>
