--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -139,6 +139,7 @@
             <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="embiggen mdl-navigation__link" href="#pokedexoverdns"><b>Pokédex over DNS</b></a>
             <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+            <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
           </nav>
         </div>
       </header>
@@ -150,6 +151,9 @@
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="#pokedexoverdns"><b>Pokédex over DNS</b></a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+        </nav>
+        <nav class="mdl-navigation mdl-layout--large-screen-only">
+          <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
         </nav>
       </div>
       <div class="ribbon indigo-ribbon"></div>
