--- a/.formatted/projects.html
+++ b/.formatted/projects.html
@@ -123,6 +123,7 @@
             <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
             <a class="embiggen mdl-navigation__link" href="#projects"><b>Popular Projects</b></a>
+            <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
           </nav>
         </div>
       </header>
@@ -134,6 +135,9 @@
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="#projects"><b>Popular Projects</b></a>
+        </nav>
+        <nav class="mdl-navigation mdl-layout--large-screen-only">
+          <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
         </nav>
       </div>
       <div class="ribbon deep_purple-ribbon"></div>
