--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -130,6 +130,7 @@
             <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
             <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+            <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
           </nav>
         </div>
       </header>
@@ -141,6 +142,9 @@
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+        </nav>
+        <nav class="mdl-navigation mdl-layout--large-screen-only">
+          <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
         </nav>
       </div>
       <div class="ribbon red-ribbon"></div>
