--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -154,7 +154,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a class="embiggen" href="#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a>, <a class="embiggen" href="#howmuch">How Much?</a>, <a class="embiggen" href="#howdoessainternetmakemoney">How does Sainternet Make Money?</a>, <a class="embiggen" href="#sowhofundssainternet">So, Who Funds Sainternet?</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a class="embiggen" href="#pwaversionneverseemstochange">The PWA Version Never Seems to Change, What Gives?</a>, <a class="embiggen" href="#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a>, <a class="embiggen" href="#howmuch">How Much?</a>, <a class="embiggen" href="#howdoessainternetmakemoney">How does Sainternet Make Money?</a>, <a class="embiggen" href="#sowhofundssainternet">So, Who Funds Sainternet?</a>
             </div>
           </div>
         </div>
@@ -164,6 +164,26 @@
             <h3><span class="embiggen">Frequently Asked Questions</span></h3>
             <p>
               Answers to some frequently asked questions regarding Sainternet Filtered DNS.
+            </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="pwaversionneverseemstochange">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">The PWA Version Never Seems to Change, What Gives?</span></h3>
+            <p class="embiggen sainternet-subheader-centered">
+              In Short
+            <p>
+              It be how it do.
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
+              Not So Short
+            </p>
+            <p>
+              Progressive Web Application versioning is difficult, and unpredictable. PWA versioning is not tied in any meaningful way to either the application service worker or manifest.
+            </p>
+            <p>
+              Typically one of the main points in deploying a service worker in the first place (other than managing offline) is to have a largely static core, and assets that can be updated dynamically.
             </p>
            </div>
         </div>
