saint-lascivious.github.io: update faq
Changes to be committed:
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   frequentlyaskedquestions.html
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js
 - modified:   serviceworker.min.js

--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -154,7 +154,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a class="embiggen" href="#pwaversionneverseemstochange">The PWA Version Never Seems to Change, What Gives?</a>, <a class="embiggen" href="#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a>, <a class="embiggen" href="#howmuch">How Much?</a>, <a class="embiggen" href="#howdoessainternetmakemoney">How does Sainternet Make Money?</a>, <a class="embiggen" href="#sowhofundssainternet">So, Who Funds Sainternet?</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a class="embiggen" href="#doesdnssainternetxyzhaveanapi">Does dns.sainternet.xyz Have an API?</a>, <a class="embiggen" href="#pwaversionneverseemstochange">The PWA Version Never Seems to Change, What Gives?</a>, <a class="embiggen" href="#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a>, <a class="embiggen" href="#howmuch">How Much?</a>, <a class="embiggen" href="#howdoessainternetmakemoney">How does Sainternet Make Money?</a>, <a class="embiggen" href="#sowhofundssainternet">So, Who Funds Sainternet?</a>
             </div>
           </div>
         </div>
@@ -167,12 +167,22 @@
             </p>
            </div>
         </div>
+        <div class="sainternet-container mdl-grid" id="doesdnssainternetxyzhaveanapi">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">Does dns.sainternet.xyz Have an API?</span></h3>
+            <p>
+              No.
+            </p>
+           </div>
+        </div>
         <div class="sainternet-container mdl-grid" id="pwaversionneverseemstochange">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">The PWA Version Never Seems to Change, What Gives?</span></h3>
             <p class="embiggen sainternet-subheader-centered">
               In Short
+            </p>
             <p>
               It be how it do.
             </p>
