saint-lascivious.github.io: update newsandupdates.html
 - document the polish invasion of 2023
   i surrender to my polish overlords

Changes to be committed:
 - modified:   .formatted/newsandupdates.html
 - modified:   newsandupdates.html

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -64,6 +64,8 @@
     <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/table.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/table.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/img.min.css">
     <link rel="stylesheet" href="resources/stylesheets/img.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/datetime.min.css">
@@ -166,7 +168,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#newsandupdates">News and Updates</a><br><a class="embiggen" href="#certaindoom"><b>CERTain Doom</b></a>, <a class="embiggen" href="#enablejavascript">Enable JavaScript</a>, <a class="embiggen" href="#devdiarygoingoffline">De<s>ar</s>v Diary: Going Offline</a>, <a class="embiggen" href="#unepokedexsilvousplait">Une Pokédex, S'il Vous Plaît</a>, <a class="embiggen" href="#analyticsdisclosure">Analytics Disclosure</a>, <a class="embiggen" href="#pwa">PWA!</a>, <a class="embiggen" href="archive.html">Archived Posts</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#newsandupdates">News and Updates</a><br><a class="embiggen" href="#thepolishinvasionof2023"><b>The Polish Invasion of 2023</b></a>, <a class="embiggen" href="#certaindoom">CERTain Doom</a>, <a class="embiggen" href="#enablejavascript">Enable JavaScript</a>, <a class="embiggen" href="#devdiarygoingoffline">De<s>ar</s>v Diary: Going Offline</a>, <a class="embiggen" href="#unepokedexsilvousplait">Une Pokédex, S'il Vous Plaît</a>, <a class="embiggen" href="#analyticsdisclosure">Analytics Disclosure</a>, <a class="embiggen" href="#pwa">PWA!</a>, <a class="embiggen" href="archive.html">Archived Posts</a>
             </div>
           </div>
         </div>
@@ -177,6 +179,96 @@
             <p>
               This page will serve to detail news and updates relevant to Sainternet such as new features and developments, planned maintenance, etc.
             </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="thepolishinvasionof2023">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">The Polish Invasion of 2023</span></h3>
+            <p class="embiggen" id="datetime">
+              first posted on Sunday, 6 May 2023 10:30+12:00 (NZST)
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
+              Poddaję się!
+            </p>
+            <p>
+              According to Google Translate at least, that is Polish for "I surrender!". Now let me explain why that might be relevant.
+            </p>
+            <p>
+              Some time ago, I started <a href="#analyticsdisclosure">collecting analytics</a> on <code>sainternet.xyz</code> using Google Analytics 4 and Google Tag Manager. A short while afterwards, I observed something unexpected. Poland.
+            </p>
+            <p>
+              Naturally, as the author and maintainer of <code>sainternet.xyz</code> and <code>dns.sainternet.xyz</code> is based in New Zealand, with the largest single contributor to the userbase known to said author also being from New Zealand, we should expect to see New Zealand represented as such in the site analytics, but no. Poland.
+            </p>
+            <p>
+              My first thought was that this was surely some mistake. Perhaps <code>sainternet.xyz</code> is similar to some other domain used in the locality. Perhaps a VPN provider? That must be it, your author concluded. Yet on further examination not only was the single largest contributor over the past three months Poland, visitors from Poland also tended to stay longer than some others on average, and overwhelmingly preferred the <a href="connecttosainternet.html">Connect to Sainternet</a> page over any other. This appears to display a clear intent.
+            </p>
+            <p>
+              Let's take a look at the rest of the data, as it also had a few more surprises in store for me.
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
+              Table Polish
+            </p>
+            <p>
+              (Get it? Because it's a table, and… Eh. I'll see myself out.)
+            </p>
+            <p>
+              I have included only the results which:
+            </p>
+            <ol>
+              <li>Were at or above 2% of total hits.</li>
+              <li>I thought were interesting or otherwise significant.</li>
+            </ol>
+            <table>
+              <tr>
+                <th>Country</th>
+                <th>Percent of Total Hits</th>
+                <th>Preferred Destination</th>
+                <th>Average Duration</th>
+              </tr>
+              <tr>
+                <td>Poland</td>
+                <td>22%</td>
+                <td><a href="connecttosainternet.html">Connect to Sainternet</a></td>
+                <td>10 min</td>
+              </tr>
+              <tr>
+                <td>United States</td>
+                <td>21%</td>
+                <td><a href="index.html">Home</a></td>
+                <td>5 min</td>
+              </tr>
+              <tr>
+                <td>New Zealand</td>
+                <td>18%</td>
+                <td><a href="index.html">Home</a></td>
+                <td>5 min</td>
+              </tr>
+              <tr>
+                <td>United Kingdom</td>
+                <td>9%</td>
+                <td><a href="index.html">Home</a></td>
+                <td>5 min</td>
+              </tr>
+              <tr>
+                <td>China</td>
+                <td>6%</td>
+                <td><a href="connecttosainternet.html">Connect to Sainternet</a></td>
+                <td>5 min</td>
+              </tr>
+              <tr>
+                <td>Japan</td>
+                <td>4%</td>
+                <td><a href="pokedexoverdns.html">Pokedex over DNS</a></td>
+                <td>10 min</td>
+              </tr>
+              <tr>
+                <td>Russia</td>
+                <td>2%</td>
+                <td><a href="connecttosainternet.html">Connect to Sainternet</a></td>
+                <td>5 min</td>
+              </tr>
+            </table>
            </div>
         </div>
         <div class="sainternet-container mdl-grid" id="certaindoom">
