saint-lascivious.github.io: clarification, minor edits
Changes to be committed:
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/newsandupdates.html
 - modified:   frequentlyaskedquestions.html
 - modified:   newsandupdates.html

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -259,7 +259,7 @@
               <tr>
                 <td>Japan</td>
                 <td>4%</td>
-                <td><a href="pokedexoverdns.html">Pokedex over DNS</a></td>
+                <td><a href="pokedexoverdns.html">Pokédex over DNS</a></td>
                 <td>10 min</td>
               </tr>
               <tr>
