--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -174,6 +174,15 @@
             <p>
               Yes.
             </p>
+            <p>
+              I am not aware of any locality in which resolving a domain to an IP using publicly accessible root and authoritative DNS servers is a crime.
+            </p>
+            <p>
+              I am also not aware of any locality in which it is a crime to supply <code>NXDOMAIN</code> responses for arbitrary domains for any given reason.
+            </p>
+            <p>
+              Content hosted at a given IP may however be illegal and use of <code>dns.sainternet.xyz</code> does not shield you from liability. This service processes DNS requests and DNS requests alone, it is not a proxy and will not obscure your browsing habits from anyone with access to your data stream.
+            </p>
            </div>
         </div>
         <div class="sainternet-container mdl-grid" id="doesdnssainternetxyzhaveanapi">
