saint-lascivious.github.io: play with depth in yet more places
 - enlift bordered images
 - enlift tables
 - some table formatting

Changes to be committed:
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   resources/stylesheets/.formatted/table.min.css
 - modified:   resources/stylesheets/table.min.css

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -219,56 +219,58 @@
               <li>Were at or above 2% of total hits.</li>
               <li>I thought were interesting or otherwise significant.</li>
             </ol>
-            <table>
-              <tr>
-                <th>Country</th>
-                <th>Percent of Total Hits</th>
-                <th>Preferred Destination</th>
-                <th>Average Duration</th>
-              </tr>
-              <tr>
-                <td>Poland</td>
-                <td>22%</td>
-                <td><a href="connecttosainternet.html">Connect to Sainternet</a></td>
-                <td>10 min</td>
-              </tr>
-              <tr>
-                <td>United States</td>
-                <td>21%</td>
-                <td><a href="index.html">Home</a></td>
-                <td>5 min</td>
-              </tr>
-              <tr>
-                <td>New Zealand</td>
-                <td>18%</td>
-                <td><a href="index.html">Home</a></td>
-                <td>5 min</td>
-              </tr>
-              <tr>
-                <td>United Kingdom</td>
-                <td>9%</td>
-                <td><a href="index.html">Home</a></td>
-                <td>5 min</td>
-              </tr>
-              <tr>
-                <td>China</td>
-                <td>6%</td>
-                <td><a href="connecttosainternet.html">Connect to Sainternet</a></td>
-                <td>5 min</td>
-              </tr>
-              <tr>
-                <td>Japan</td>
-                <td>4%</td>
-                <td><a href="pokedexoverdns.html">Pokédex over DNS</a></td>
-                <td>10 min</td>
-              </tr>
-              <tr>
-                <td>Russia</td>
-                <td>2%</td>
-                <td><a href="connecttosainternet.html">Connect to Sainternet</a></td>
-                <td>5 min</td>
-              </tr>
-            </table>
+            <div class="mdl-shadow--4dp enlift rounded">
+              <table>
+                <tr>
+                  <th>Country</th>
+                  <th>Percent of Total Hits</th>
+                  <th>Preferred Destination</th>
+                  <th>Average Duration</th>
+                </tr>
+                <tr>
+                  <td>Poland</td>
+                  <td><code>22%</code></td>
+                  <td><a href="connecttosainternet.html">Connect to Sainternet</a></td>
+                  <td><code>10 min</code></td>
+                </tr>
+                <tr>
+                  <td>United States</td>
+                  <td><code>21%</code></td>
+                  <td><a href="index.html">Home</a></td>
+                  <td><code>5 min</code></td>
+                </tr>
+                <tr>
+                  <td>New Zealand</td>
+                  <td><code>18%</code></td>
+                  <td><a href="index.html">Home</a></td>
+                  <td><code>5 min</code></td>
+                </tr>
+                <tr>
+                  <td>United Kingdom</td>
+                  <td><code>9%</code></td>
+                  <td><a href="index.html">Home</a></td>
+                  <td><code>5 min</code></td>
+                </tr>
+                <tr>
+                  <td>China</td>
+                  <td><code>6%</code></td>
+                  <td><a href="connecttosainternet.html">Connect to Sainternet</a></td>
+                  <td><code>5 min</code></td>
+                </tr>
+                <tr>
+                  <td>Japan</td>
+                  <td><code>4%</code></td>
+                  <td><a href="pokedexoverdns.html">Pokédex over DNS</a></td>
+                  <td><code>10 min</code></td>
+                </tr>
+                <tr>
+                  <td>Russia</td>
+                  <td><code>2%</code></td>
+                  <td><a href="connecttosainternet.html">Connect to Sainternet</a></td>
+                  <td><code>5 min</code></td>
+                </tr>
+              </table>
+            </div>
            </div>
         </div>
         <div class="sainternet-container mdl-grid" id="certaindoom">
@@ -293,12 +295,14 @@
             <p class="embiggen sainternet-subheader-centered">
               What Does This Mean for Me?
             </p>
-            <picture>
-              <source srcset="resources/images/farquaad.webp" type="image/webp">
-              <source srcset="resources/images/farquaad.png" type="image/png">
-              <source srcset="resources/images/farquaad.jpg" type="image/jpeg">
-              <img src="resources/images/farquaad.jpg" width="756" height="480" alt="Some of you may die, but that is a sacrifice I am willing to make.">
-            </picture>
+            <div class="mdl-shadow--4dp enlift">
+              <picture>
+                <source srcset="resources/images/farquaad.webp" type="image/webp">
+                <source srcset="resources/images/farquaad.png" type="image/png">
+                <source srcset="resources/images/farquaad.jpg" type="image/jpeg">
+                <img src="resources/images/farquaad.jpg" width="756" height="480" alt="Some of you may die, but that is a sacrifice I am willing to make.">
+              </picture>
+            </div>
             <p>
               It's important to note that while transitioning to the newer ECDSA certificate type may provide enhanced security and performance benefits, it may negatively affect some clients, particularly those using legacy Android devices (Android 7.1 and lower).
             </p>
